--- a/capitulo1.html
+++ b/capitulo1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+</html>   <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -35,10 +35,22 @@
         En diciembre, recibimos la visita de mi tutor de pasantías, quien evaluó mi desempeño y entregó un documento notificando a la empresa sobre mis vacaciones, programadas del 13 de diciembre al 7 de enero. Durante los primeros días de ese mes, continué con tareas clave como el mantenimiento de la impresora y la supervisión del departamento cuando mis compañeros debían salir a brindar soporte a otras sedes.
         Este primer capítulo marca el inicio de mi experiencia en la empresa, destacando los aprendizajes y desafíos que enfrenté desde el primer día. En los siguientes capítulos, detallaré cómo continué desarrollando mis habilidades y contribuyendo al departamento en los meses posteriores.
       </p>
+       <!-- Botón para mostrar/ocultar GIFs -->
+  <button id="toggleGifs" class="gif-button">Ver Presentaciones</button>
+
+  <!-- Sección de GIFs (oculta inicialmente) -->
+  <div id="gifSection" class="gif-section">
+    <h3>Presentaciones Realizadas</h3>
+    <div class="gif-container">
+      <img src="gifs/presentacion 1.gif" alt="presentacion 1" class="gif">
+      <img src="gifs/presentacion 2.gif" alt="presentación 2" class="gif">
+      <img src="gifs/presentacion 3.gif" alt="presentación 3" class="gif">
+    </div>
+  </div>
+</div>
       <div class="navigation-buttons">
         <a href="capitulo2.html" class="button">Siguiente Capítulo</a>
       </div>
     </div>
   </main>
 </body>
-</html>
