--- a/capitulo1.html
+++ b/capitulo1.html
@@ -11,14 +11,14 @@
   <header>
     <button onclick="window.location.href='index.html'" class="back-button">Volver al Inicio</button>
     <h1 style="text-align: center; margin-bottom: 0;">Capítulo 1</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;">🌙</button>
+    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;"></button>
   </header>
 
   <main>
     <div class="chapter-content">
       <h2 style="text-align: center;">Introducción a mi Experiencia como Pasante en Soporte&Tecnología</h2>
       <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
-        Mi nombre es Brayan Morales y este informe tiene como objetivo detallar mi experiencia como pasante en el departamento de Soporte y Tecnología de la empresa. Desde octubre del año pasado hasta la fecha actual, he llevado a cabo diversas actividades que han contribuido tanto a mi aprendizaje como al funcionamiento del equipo. En este primer capítulo, relataré mi ingreso a la empresa y mis primeras tareas, marcando el inicio de una etapa de gran crecimiento profesional.
+        Mi nombre es Brayan Morales y este informe tiene como objetivo detallar mi experiencia como pasante en el departamento de Soporte y Tecnología de la empresa <b>"Factory Cosmetics"</b>. Desde octubre del año pasado hasta la fecha actual, he llevado a cabo diversas actividades que han contribuido tanto a mi aprendizaje como al funcionamiento del equipo. En este primer capítulo, relataré mi ingreso a la empresa y mis primeras tareas, marcando el inicio de una etapa de gran crecimiento profesional.
       </p>
       <h2 style="text-align: center;">Mi llegada a la empresa</h2>
       <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
