--- a/capitulo3.html
+++ b/capitulo3.html
@@ -11,7 +11,7 @@
   <header>
     <button onclick="window.location.href='index.html'" class="back-button">Volver al Inicio</button>
     <h1 style="text-align: center; margin-bottom: 0;">Capítulo 3</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;">🌙</button>
+    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;"></button>
   </header>
 
   <main>
