--- a/capitulo4.html
+++ b/capitulo4.html
@@ -11,7 +11,7 @@
   <header>
     <button onclick="window.location.href='index.html'" class="back-button">Volver al Inicio</button>
     <h1 style="text-align: center; margin-bottom: 0;">Capítulo 4</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;">🌙</button>
+    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;"></button>
   </header>
 
   <main>
@@ -22,6 +22,7 @@
       </p>
       <div class="navigation-buttons">
         <a href="capitulo3.html" class="button">Anterior Capítulo</a>
+        <a href="laborsocial.html" class="button">Siguiente Capítulo</a>
       </div>
     </div>
   </main>
