--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
-<body>
+<body class="home">
+  <div class="background"></div>
   <header>
     <h1 style="text-align: center; margin-bottom: 0;">Informe de Pasantías</h1>
     <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;">🌙</button>
   </header>
-
   <main>
     <h2 style="text-align: center; margin-top: 20px;">Seleccione el capítulo</h2>
     <div class="container" style="margin-top: 30px; display: flex; flex-direction: column; align-items: center; gap: 15px;">
@@ -20,6 +20,7 @@
       <a href="capitulo2.html" class="button">Capítulo 2</a>
       <a href="capitulo3.html" class="button">Capítulo 3</a>
       <a href="capitulo4.html" class="button">Capítulo 4</a>
+      <a href="laborsocial.html" class="button">Labor Social</a>
     </div>
   </main>
 </body>
