--- a/capitulo2.html
+++ b/capitulo2.html
@@ -21,9 +21,9 @@
         Durante el desarrollo de mi etapa como pasante, complementé mi formación realizando diversos cursos que fortalecieron mis habilidades técnicas. siendo un poco mas especifico, 
         completé los siguientes cursos:
        <strong>Curso de Excel,</strong>
-        <strong>Curso de Python (con enfoque en su funcionalidad, etiquetas y variables),</strong>
-        <strong>Curso de JavaScript.</strong>
-        Adicionalmente, adquirí conocimientos en <b>HTML y CSS</b> mediante recursos como videos educativos. Si bien no los incluí en la sección de cursos certificados, estos conocimientos han sido fundamentales para mi desarrollo profesional en el área.
+        <strong>Curso de Python (con enfoque en su funcionalidad, etiquetas y variables).</strong>
+        
+        Adicionalmente, adquirí conocimientos en <b>HTML,CSS y Curso de JavaScript.</b> mediante recursos como videos educativos. Si bien no los incluí en la sección de cursos certificados, estos conocimientos han sido fundamentales para mi desarrollo profesional en el área.
       </p>
       <h2 style="text-align: center;">Optimización de Procesos mediante Presentaciones</h2>
       <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
@@ -34,10 +34,10 @@
         En <strong>ver presentaciones</strong> cargadas podran observar mas a detalle
         la finalidad de cada una. junto a ellas los certificados de los cursos.
       </p>
-       <!-- Botón para mostrar/ocultar GIFs -->
+ 
   <button id="toggleGifs" class="gif-button">Ver Presentaciones</button>
 
-  <!-- Sección de GIFs (oculta inicialmente) -->
+
   <div id="gifSection" class="gif-section">
     <h3>Presentaciones y Cursos realizados</h3>
     <div class="gif-container">
