--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="background"></div>
   <header>
     <h1 style="text-align: center; margin-bottom: 0;">Informe de Pasantías</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;">🌙</button>
+    <button id="themeToggle">🌙</button>
   </header>
   <main>
     <h2 style="text-align: center; margin-top: 20px;">Seleccione el capítulo</h2>
