--- a/laborsocial.html
+++ b/laborsocial.html
@@ -11,13 +11,13 @@
   <header>
     <button onclick="window.location.href='index.html'" class="back-button">Volver al Inicio</button>
     <h1 style="text-align: center; margin-bottom: 0;">Labor Social</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;"></button>
+    <button id="themeToggle">🌙</button>
   </header>
 
   <main>
     <div class="chapter-content">
       <h2 style="text-align: center;">Informe de labor social</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
         Durante mi etapa en el liceo, llevé a cabo mi labor social los días <b>lunes y viernes</b>, en un horario aproximado de <b>7:00 a.m. a 11:00 a.m..</b> Sin embargo, este horario era relativo, ya que la duración de la jornada variaba en función de las actividades realizadas, lo que en ocasiones nos permitía retirarnos más temprano o, por el contrario, extender nuestra permanencia según las necesidades del día.
 
 Las actividades desempeñadas en el marco de la labor social estuvieron enfocadas en brindar apoyo a las docentes de educación preescolar, facilitando el traslado ordenado de los niños de un lugar a otro dentro de las instalaciones. Adicionalmente, colaboré en diversas tareas logísticas, algunas de esas actividades fueron:
@@ -35,8 +35,9 @@ Para garantizar el adecuado desarrollo del evento, seguimos un protocolo de orga
 Nuestra participación en esta iniciativa incluyó la gestión y planificación de la actividad, contando con el respaldo de nuestros representantes, quienes nos apoyaron en la organización de la premiación. Al finalizar el partido, se realizó la entrega de medallas y trofeos a los niños como reconocimiento por su esfuerzo y participación.
 
 Posteriormente, llevamos a cabo un compartir entre los jugadores y los organizadores, lo que permitió fortalecer los lazos entre la comunidad educativa y deportiva, promoviendo valores como el compañerismo, la disciplina y el trabajo en equipo.
-
-En la sección de <b>"Ver Presentaciones"</b>, se encuentran adjuntas algunas fotografías que reflejan los momentos más significativos de esta actividad, evidenciando el impacto positivo generado en los niños y en la comunidad.
+    </p>
+    <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+      En la sección de <b>"Ver Presentaciones"</b>, se encuentran adjuntas algunas fotografías que reflejan los momentos más significativos de esta actividad, evidenciando el impacto positivo generado en los niños y en la comunidad.
     </p>
          <!-- Botón para mostrar/ocultar GIFs -->
   <button id="toggleGifs" class="gif-button">Ver Presentaciones</button>
@@ -54,7 +55,7 @@ En la sección de <b>"Ver Presentaciones"</b>, se encuentran adjuntas algunas fo
   <button id="downloadWordFile" class="button">Archivo de Word</button>
 
   <!-- Enlace oculto para la descarga -->
-  <a id="hiddenDownloadLink" href="gifs/Informe-labor.docx" download style="display: none;"></a>
+  <a id="hiddenDownloadLink" href="documentos/Informe-labor.docx" download style="display: none;"></a>
 </div>
       <div class="navigation-buttons">
         <a href="capitulo4.html" class="button">Anterior Capítulo</a>
