--- a/capitulo1.html
+++ b/capitulo1.html
@@ -11,29 +11,29 @@
   <header>
     <button onclick="window.location.href='index.html'" class="back-button">Volver al Inicio</button>
     <h1 style="text-align: center; margin-bottom: 0;">Capítulo 1</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;"></button>
+    <button id="themeToggle">🌙</button>
   </header>
 
   <main>
     <div class="chapter-content">
       <h2 style="text-align: center;">Introducción a mi Experiencia como Pasante en Soporte&Tecnología</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
         Mi nombre es Brayan Morales y este informe tiene como objetivo detallar mi experiencia como pasante en el departamento de Soporte y Tecnología de la empresa <b>"Factory Cosmetics"</b>. Desde octubre del año pasado hasta la fecha actual, he llevado a cabo diversas actividades que han contribuido tanto a mi aprendizaje como al funcionamiento del equipo. En este primer capítulo, relataré mi ingreso a la empresa y mis primeras tareas, marcando el inicio de una etapa de gran crecimiento profesional.
       </p>
       <h2 style="text-align: center;">Mi llegada a la empresa</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
-        El martes 7 de octubre de 2024, ingresé por primera vez a la empresa como pasante en el departamento de Soporte y Tecnología. Desde el primer momento, mis compañeros me recibieron cordialmente y me asignaron mi primera tarea: revisar las laptops almacenadas en el departamento. Algunas de estas computadoras estaban inservibles, mientras que otras simplemente esperaban ser reasignadas. Mi función era determinar cuáles podían ser recuperadas y puestas nuevamente en operación.
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+        <b>El martes 7 de octubre de 2024,</b> ingresé por primera vez a la empresa como pasante en el departamento de <b>Soporte y Tecnología.</b> Desde el primer momento, mis compañeros me recibieron cordialmente y me asignaron mi primera tarea: <b>revisar las laptops almacenadas en el departamento.</b> Algunas de estas computadoras estaban inservibles, mientras que otras simplemente esperaban ser reasignadas. Mi función era determinar cuáles podían ser recuperadas y puestas nuevamente en operación.
       </p>
       <h2 style="text-align: center;">Primeras tareas y aprendizaje</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
-        Durante mis primeras semanas, con la guía de mis compañeros, aprendí los procedimientos para evaluar y reparar las laptops. Como resultado, logré recuperar ocho equipos, mientras que cinco fueron considerados inservibles y utilizados como repuestos para mejorar otras máquinas. Esta tarea me permitió desarrollar habilidades en diagnóstico y mantenimiento de hardware, además de mejorar mi capacidad para trabajar en equipo.
-        Al finalizar octubre, también adquirí conocimientos sobre el mantenimiento de la impresora del departamento y la optimización del administrador de red. Aprendí a desatascar la impresora y a realizar actualizaciones en el sistema, asegurando su correcto funcionamiento.
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+        Durante mis primeras semanas, con la guía de mis compañeros, aprendí los procedimientos para evaluar y reparar las laptops. Como resultado, <b>logré recuperar ocho equipos, mientras que cinco fueron considerados inservibles y utilizados como repuestos para mejorar otras máquinas.</b> Esta tarea me permitió desarrollar habilidades en diagnóstico y mantenimiento de hardware, además de mejorar mi capacidad para trabajar en equipo.
+        Al finalizar octubre, también adquirí conocimientos sobre el <b>mantenimiento de la impresora</b> del departamento y la optimización del administrador de red. Aprendí a desatascar la impresora y a realizar actualizaciones en el sistema, asegurando su correcto funcionamiento.
       </p>
       <h2 style="text-align: center;">Primeros logros y retos</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
-        Para noviembre, continué con la optimización del administrador de red y el mantenimiento de la impresora, que presentaba atascos cada vez más frecuentes. Identificamos que la causa del problema era el desgaste del tóner, por lo que implementamos una solución temporal: habilitar la bandeja posterior para reducir los atascos. Además, creamos una tabla en Excel para calcular el tiempo de duración de cada tóner y gestionar su reposición de manera eficiente.
-        En diciembre, recibimos la visita de mi tutor de pasantías, quien evaluó mi desempeño y entregó un documento notificando a la empresa sobre mis vacaciones, programadas del 13 de diciembre al 7 de enero. Durante los primeros días de ese mes, continué con tareas clave como el mantenimiento de la impresora y la supervisión del departamento cuando mis compañeros debían salir a brindar soporte a otras sedes.
-        Este primer capítulo marca el inicio de mi experiencia en la empresa, destacando los aprendizajes y desafíos que enfrenté desde el primer día. En los siguientes capítulos, detallaré cómo continué desarrollando mis habilidades y contribuyendo al departamento en los meses posteriores.
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+        Para noviembre, continué con la optimización del administrador de red y el mantenimiento de la impresora, que presentaba atascos cada vez más frecuentes. Identificamos que la causa del problema era el desgaste del tóner, por lo que implementamos una <b>solución temporal: habilitar la bandeja posterior para reducir los atascos.</b>
+        En diciembre, recibimos la visita de mi tutor de pasantías, quien evaluó mi desempeño y entregó un documento notificando a la empresa sobre mis vacaciones, programadas del <b>13 de diciembre al 7 de enero.</b> Durante los primeros días de ese mes, continué con tareas clave como el mantenimiento de la impresora y la supervisión del departamento cuando mis compañeros debían salir a brindar soporte a otras sedes.
+        Este primer capítulo marca el inicio de mi experiencia en la empresa, destacando los aprendizajes y desafíos que enfrenté desde el primer día. En los siguientes capítulos, detallaré cómo continué desarrollando mis habilidades y contribuyendo al departamento en los siguientes meses.
       </p>
  
   <button id="toggleGifs" class="gif-button">Ver Presentaciones</button>
