--- a/capitulo2.html
+++ b/capitulo2.html
@@ -11,13 +11,13 @@
   <header>
     <button onclick="window.location.href='index.html'" class="back-button">Volver al Inicio</button>
     <h1 style="text-align: center; margin-bottom: 0;">Capítulo 2</h1>
-    <button id="themeToggle" aria-label="Cambiar tema" style="position: absolute; top: 10px; right: 10px;"></button>
+    <button id="themeToggle">🌙</button>
   </header>
 
   <main>
     <div class="chapter-content">
       <h2 style="text-align: center;">Capacitación y Aprendizaje durante la Pasantía</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
         Durante el desarrollo de mi etapa como pasante, complementé mi formación realizando diversos cursos que fortalecieron mis habilidades técnicas. siendo un poco mas especifico, 
         completé los siguientes cursos:
        <strong>Curso de Excel,</strong>
@@ -26,8 +26,8 @@
         Adicionalmente, adquirí conocimientos en <b>HTML,CSS y Curso de JavaScript.</b> mediante recursos como videos educativos. Si bien no los incluí en la sección de cursos certificados, estos conocimientos han sido fundamentales para mi desarrollo profesional en el área.
       </p>
       <h2 style="text-align: center;">Optimización de Procesos mediante Presentaciones</h2>
-      <p style="text-align: justify; max-width: 800px; margin: 0 auto;">
-        Además de los cursos realizados en mi tiempo libre, he dado continuidad a la creación de presentaciones en Canvas, con el propósito de optimizar la resolución de situaciones recurrentes que los usuarios enfrentan y que, habitualmente, son remitidas a nuestro departamento.
+      <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+        Además de los cursos realizados en mi tiempo libre, he dado continuidad a la <b>creación de presentaciones en Canvas,</b> con el propósito de optimizar la resolución de situaciones recurrentes que los usuarios enfrentan y que, habitualmente, son remitidas a nuestro departamento.
         Dado que gran parte del tiempo estamos enfocados en brindar soporte a incidencias de mayor prioridad, estas presentaciones se difunden por correo, permitiendo a los usuarios acceder a soluciones de manera autónoma y eficiente. 
       </p>
       <p>
@@ -42,8 +42,8 @@
     <h3>Presentaciones y Cursos realizados</h3>
     <div class="gif-container">
       <img src="gifs/presentacion 7.gif" alt="presentacion 4" class="gif">
-      <img src="gifs/presentacion 5.jpg" alt="presentación 5" class="gif">
-      <img src="gifs/presentacion 6.jpg" alt="presentación 6" class="gif">
+      <img src="documentos/presentacion 5.jpg" alt="presentación 5" class="gif">
+      <img src="documentos/presentacion 6.jpg" alt="presentación 6" class="gif">
     </div>
   </div>
 </div>
